# azure-account-show

./: Dockerfile  Pipfile  README.md  app.py  main.py  pipeline.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yaml  build-and-publish-image.yaml  build-and-push.yml  build.yaml  default-workflow-aks.yaml  nginx-AutoDeployTrigger-0a1c207c-b7a5-4ded-9e70-a23f3f8493de.yml
manifests/: deployment.yaml  service.yaml
