[tool.poetry]
name = "azure-account-show"
version = "0.1.0"
description = ""
authors = ["Clemens Wältken <clemens.waltken@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-mgmt-subscription = "*"
azure-identity = "*"


[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
